# pacs002

./: .gitignore  go.mod  main.go
pacs008-analytics/: README.md  pyproject.toml
pacs008-analytics/src/pacs008_analytics/: __init__.py  main.py
static/: index.html
