[project]
name = "pacs008-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mohamed Yousif", email = "mmbusif@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "pandas>=2.0.3",
    "uvicorn>=0.28.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
